--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,65 @@ body{
     font-size: 16px;
     color: hsl(228, 12%, 48%);
 }
+
+.product-name{
+    font-family: "Fraunces", serif;   
+    font-weight: 700;
+    font-size: 35px;
+    color:hsl(212, 21%, 14%);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.product-desc{
+    font-family: "Montserrat", serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: hsl(228, 12%, 48%);
+    line-height: 1.5;
+}
+
+.price-container{
+    display: flex;
+    align-items: center;
+    padding-top: 26px;
+    padding-bottom: 26px;
+}
+
+.price{
+    font-family: "Fraunces", serif;   
+    font-weight: 700;
+    font-size: 35px;
+    color:hsl(158, 36%, 37%);
+    padding-right: 20px;
+}
+
+.old-price{
+    font-family: "Montserrat", serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: hsl(228, 12%, 48%);
+}
+
+.cart-button{
+    background-color: hsl(158, 36%, 37%);
+    padding: 20px;
+    border-radius: 10px;
+    /* align-items:center;
+    text-align: center; */
+    justify-content: center;
+    display: flex;
+}
+
+.cart-text{
+    padding-left: 10px;
+    font-family: "Montserrat", serif;
+    font-weight: 700;
+    font-size: 16px;
+    color: hsl(0, 0%, 100%);
+}
+
+.cart-button:hover{
+    background-color: rgb(40, 82, 66);
+    cursor: pointer;
+}
