--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,16 @@ body{
 
 .perfume img{
     object-fit: cover;
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 
 .product-details{
     padding: 30px;
     justify-content: left;
-    width: 300px;
+    width: 50%;
+    box-sizing: border-box;
 }
 
 .product-title{
@@ -100,3 +102,20 @@ body{
     background-color: rgb(40, 82, 66);
     cursor: pointer;
 }
+
+@media screen and (max-width: 600px){
+    .white-card{
+        display: block;
+        width: 70%;
+        height: 90%;
+    }
+    .perfume img{
+        object-fit:cover;
+        width: 100%;
+        height: 300px;
+    }
+    .product-details{
+        width: 100%;
+        height: 100%;
+    }
+  }
